# pymondantic

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: advanced_features.py  async_example.py  user_model.py
src/pymondantic/: __init__.py  aggregation.py  cache.py  client.py  embedded.py  fields.py  models.py  polymorphic.py
